Added form validation

--- a/Practice/Demo/index.html
+++ b/Practice/Demo/index.html
@@ -52,7 +52,14 @@
         <button type="submit" >Check</button>
 
     </form>
-    
+    <br>
+    <button onclick ="fadeOut()" id="fadeOut">Fade Out</button>
+    <br><img id ="img3" src="./Images/sea.jpg" height="30rem" widdth ="40rem" alt="">
+    <button onclick ="fadeIn()" id="fadeIn">Fade In</button>
+    <br><br>
+    <h2>Zoom in and zoom out while focusing on image</h2>
+    <br><img id ="img4" onmouseover="increase()" onmouseout="decrease()" src="./Images/sea.jpg" height="100rem" width ="100rem" alt="">
+ 
 
 </body>
 </html>
